JPackage Maven Plugin 1.4.0
* added: 'addModules' parameter
* added: multiple 'modulePath' parameters
* added: default value for 'name' parameter
* removed: custom path resolution
* deprecated: single 'modulePath' parameter
* deprecated: JPACKAGE_HOME